--- a/app/templates/service_admin/forms/virus_air_disinfection_request_form.html
+++ b/app/templates/service_admin/forms/virus_air_disinfection_request_form.html
@@ -140,99 +140,89 @@
                         <div class="box">
                             <h5 class="title is-size-5">รายการทดสอบ</h5>
                             <hr style="background-color: gainsboro">
-                            {% if request_id %}
-                                <div class="field">
-                                    <label class="label">
-                                        {{ form.label }}
-                                    </label>
-                                </div>
-                                {% for subform in form %}
-                                    {% if subform.type == 'FormField' %}
-                                        {% set ns = namespace(has_value=false) %}
-                                        {% for sb in subform %}
-                                            {% if sb.type != 'HiddenField' and sb.type != 'FieldList' and sb.data %}
-                                                {% set ns.has_value = true %}
-                                            {% endif %}
-                                        {% endfor %}
-                                        {% if ns.has_value %}
-                                            <div class="card subform-card mb-4" id="{{ subform.name }}">
-                                                <header class="card-header">
-                                                    <p class="card-header-title">{{ subform.label }}</p>
-                                                </header>
-                                                <div class="card-content">
-                                                    {% for field in subform %}
-                                                        {% if field.type != 'HiddenField' and field.type != 'CSRFTokenField' %}
-                                                            {% if field.type == 'FieldList' %}
-                                                                <table class="table is-fullwidth ">
-                                                                    <thead>
-                                                                    {% for subfield in field %}
-                                                                        {% if loop.first %}
-                                                                            {% for _field in subfield %}
-                                                                                {% if _field.type != 'CSRFTokenField' %}
-                                                                                    <th style="border: none">
-                                                                                        {{ _field.label.text }}
-                                                                                        {% if _field.label.text != 'อัตราส่วนเจือจางผลิตภัณฑ์' and _field.label.text != 'ต่อน้ำ' %}
-                                                                                            <span class="has-text-danger">*</span>
-                                                                                        {% endif %}
-                                                                                    </th>
+                            <div class="field">
+                                <label class="label">
+                                    {{ form.label }}
+                                </label>
+                            </div>
+                            {% for subform in form %}
+                                {% if subform.type == 'FormField' %}
+                                    <div class="card subform-card mb-4" id="{{ subform.name }}">
+                                        <header class="card-header">
+                                            <p class="card-header-title">{{ subform.label }}</p>
+                                        </header>
+                                        <div class="card-content">
+                                            {% for field in subform %}
+                                                {% if field.type != 'HiddenField' and field.type != 'CSRFTokenField' %}
+                                                    {% if field.type == 'FieldList' %}
+                                                        <table class="table is-fullwidth ">
+                                                            <thead>
+                                                            {% for subfield in field %}
+                                                                {% if loop.first %}
+                                                                    {% for _field in subfield %}
+                                                                        {% if _field.type != 'CSRFTokenField' %}
+                                                                            <th style="border: none">
+                                                                                {{ _field.label.text }}
+                                                                                {% if _field.label.text != 'อัตราส่วนเจือจางผลิตภัณฑ์' and _field.label.text != 'ต่อน้ำ' %}
+                                                                                    <span class="has-text-danger">*</span>
                                                                                 {% endif %}
-                                                                            {% endfor %}
+                                                                            </th>
                                                                         {% endif %}
                                                                     {% endfor %}
-                                                                    </thead>
-                                                                    <tbody>
-                                                                    {% for subfield in field %}
-                                                                        <tr>
-                                                                            {% for _field in subfield %}
-                                                                                {% if _field.type != 'CSRFTokenField' %}
-                                                                                    <td style="border: none">{{ _field() }}</td>
-                                                                                {% endif %}
-                                                                            {% endfor %}
-                                                                        </tr>
-                                                                    {% endfor %}
-                                                                    </tbody>
-                                                                </table>
-                                                            {% else %}
-                                                                <div class="field">
-                                                                    <label class="label">
-                                                                        {{ field.label }}
-                                                                        <span class="has-text-danger">*</span>
-                                                                    </label>
-                                                                    <div class="control">
-                                                                        {{ field() }}
-                                                                    </div>
-                                                                </div>
-                                                            {% endif %}
-                                                        {% endif %}
-                                                    {% endfor %}
-                                                    <button id="{{ subform.name }}" type="button"
-                                                            class="button is-danger is-rounded is-small remove-subform"
-                                                            data-request-id="{{ request_id or '' }}"
-                                                            hx-post="{{ url_for('service_admin.remove_condition_form', request_id=request_id) }}"
-                                                            hx-vals='{"field": "{{ subform.name }}"}'
-                                                            hx-target="closest .subform-card"
-                                                            hx-swap="outerHTML"
-                                                    >
-                                                        ลบ
-                                                    </button>
-                                                </div>
-                                            </div>
-                                        {% endif %}
-                                    {% endif %}
-                                {% endfor %}
-                            {% endif %}
-                            <div class="field">
-                                <div id="condition-fields"></div>
-                            </div>
-                            <div class="field">
-                                <div class="select">
-                                    {{ form.product_type(
-                                        **{'hx-get': url_for("service_admin.get_virus_air_disinfection_condition_form", code=code),
-                                        'hx-target': '#condition-fields',
-                                         'hx-swap': 'beforeend',
-                                         'hx-trigger': 'change, load'}) }}
-                                </div>
-                            </div>
+                                                                {% endif %}
+                                                            {% endfor %}
+                                                            </thead>
+                                                            <tbody>
+                                                                {% for subfield in field %}
+                                                                    <tr>
+                                                                        {% for _field in subfield %}
+                                                                            {% if _field.type != 'CSRFTokenField' %}
+                                                                                <td style="border: none">{{ _field() }}</td>
+                                                                            {% endif %}
+                                                                        {% endfor %}
+                                                                        <td style="border: none">
+                                                                            <a class="button is-danger is-outlined"
+                                                                               hx-delete="{{ url_for('service_admin.remove_virus_surface_disinfection_organism_form_entry',
+                                                                               name=subform.name) }}"
+                                                                               hx-target="closest tr"
+                                                                               hx-swap="outerHTML"
+                                                                            >
+                                                                                <span class="icon"><i class="fas fa-trash-alt"></i></span>
+                                                                            </a>
+                                                                        </td>
+                                                                    </tr>
+                                                                {% endfor %}
+                                                                <tr>
+                                                                    <td>
+                                                                        <a class="button is-info is-outlined is-rounded"
+                                                                           hx-post="{{ url_for('service_admin.add_virus_surface_disinfection_organism_form_entry') }}"
+                                                                           hx-target="previous tr"
+                                                                           hx-swap="afterend"
+                                                                        >
+                                                                            <span class="icon"><i class="fas fa-plus"></i></span>
+                                                                            <span>เพิ่ม</span>
+                                                                        </a>
+                                                                    </td>
+                                                                </tr>
+                                                            </tbody>
+                                                        </table>
+                                                    {% else %}
+                                                        <div class="field">
+                                                            <label class="label">
+                                                                {{ field.label }}
+                                                                <span class="has-text-danger">*</span>
+                                                            </label>
+                                                            <div class="control">
+                                                                {{ field() }}
+                                                            </div>
+                                                        </div>
+                                                    {% endif %}
+                                                {% endif %}
+                                            {% endfor %}
+                                        </div>
+                                    </div>
+                                {% endif %}
+                            {% endfor %}
                             <div class="field">
                                 <div class="control">
                                     {{ form.read_document() }}
@@ -264,85 +254,6 @@
 {% block scripts %}
     {{ super() }}
     <script>
-        function removeProductTypeOptions() {
-            const productType = document.getElementById('product_type');
-            const subforms = document.querySelectorAll('.subform-card');
-            for (let i = productType.options.length - 1; i >= 0; i--) {
-                const option = productType.options[i];
-                if (option.value === '') continue;
-                subforms.forEach(subform => {
-                    const subformId = subform.id.split(/[\s_]+/)[0];
-                    if (option.value === subformId) {
-                        option.remove();
-                    }
-                });
-            }
-            productType.selectedIndex = 0;
-        }
-
-        document.addEventListener('DOMContentLoaded', removeProductTypeOptions);
-
-        document.body.addEventListener('htmx:afterSwap', function (evt) {
-            if (evt.target.id === 'condition-fields') {
-                removeProductTypeOptions();
-            }
-        });
-    </script>
-    <script>
-        function validateProductType() {
-            const product_type = document.getElementById('product_type');
-            const subforms = document.querySelector('.subform-card');
-            if (subforms == null) {
-                product_type.required = true;
-                product_type.oninvalid = function () {
-                    this.setCustomValidity('กรุณาเลือกประเภทผลิตภัณฑ์');
-                };
-                product_type.oninput = function () {
-                    this.setCustomValidity('');
-                };
-            } else {
-                product_type.required = false;
-                product_type.setCustomValidity('');
-                product_type.oninvalid = null;
-                product_type.oninput = null;
-            }
-        }
-
-        validateProductType();
-        document.addEventListener('change', validateProductType);
-    </script>
-    <script>
-        document.addEventListener('click', function (e) {
-            const productType = document.getElementById('product_type');
-            if (e.target.classList.contains('remove-subform')) {
-                const card = e.target.closest('.subform-card');
-                const requestId = e.target.dataset.requestId;
-                const text = card.querySelector('label').textContent.trim();
-                if (!requestId) {
-                    card.remove();
-                    e.preventDefault();
-                }
-                const subformId = e.target.id.split(/[\s_]+/)[0];
-
-                let hasOptions = false;
-                for (let i = 0; i < productType.options.length; i++) {
-                    if (productType.options[i].value === subformId) {
-                        hasOptions = true;
-                        break;
-                    }
-                }
-
-                if (hasOptions == false) {
-                    const option = document.createElement('option');
-                    option.value = subformId;
-                    option.text = text;
-                    productType.appendChild(option);
-                }
-            }
-            productType.selectedIndex = 0;
-        });
-    </script>
-    <script>
         function toggleTable(subform) {
             const table = subform.find('table');
             const checkboxes = table.find('tbody tr input[type="checkbox"]');
@@ -369,7 +280,6 @@
                     textInputs.each(function () {
                         const name = $(this).attr('name');
                         const isOptional = name.endsWith('ratio') || name.endsWith('per_water');
-                        $(this).prop('readonly', !active);
 
                         if (active && !isOptional) {
                             $(this)
